# zero2prod

./: Cargo.toml  Dockerfile
configuration/: base.yaml  local.yaml  production.yaml
example/: 125. Palindrom.rs  128. Longest Consecutive Sequence.rs  228. Summary Ranges.rs  242. Valid Anagram.rs
migrations/: 20241204124719_create_subscriptions_table.sql  20250121120145_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
